PL0文法.txt
program = block '.'

block = [ 'const' ident '=' number {',' ident '=' number} ';']
        [ 'var' ident {',' ident} ';']
        { 'procedure' ident ';' block ';' } statement

statement = [ ident ':=' expression
              | 'call' ident
              | 'begin' statement {';' statement } 'end'
              | 'if' condition 'then' statement  ['else' statement]
              | 'while' condition 'do' statement 
              | 'repeat' statement 'until' condition
              | 'read' '(' ident {',' ident} ')'
              | 'write' '(' ident {',' ident} ')']

condition = 'odd' expression |
            expression ('='|'#'|'<'|'<='|'>'|'>=') expression

expression = [ '+'|'-'] term { ('+'|'-') term}

term = factor {('*'|'/') factor}

factor = ident | number | '(' expression ')'



<程序> ::= <分程序>.
<分程序> ::= [<常量说明部分>][变量说明部分>][<过程说明部分>]<语句>
<常量说明部分> ::= const<常量定义>{,<常量定义>};
<常量定义> ::= <标识符>=<无符号整数>
<无符号整数> ::= <数字>{<数字>}
<标识符> ::= <字母>{<字母>|<数字>}
<变量说明部分>::= var<标识符>{,<标识符>};
<过程说明部分> ::= <过程首部><分程序>{<过程说明部分>};
<过程首部> ::= procedure<标识符>;
<语句> ::= <赋值语句>|<条件语句>|<当型循环语句>|<过程调用语句>|<读语句>|<写语句>|<复合语句>|<重复语句>|<空>
<赋值语句> ::= <标识符>:=<表达式>
<表达式> ::= [+|-]<项>{<加法运算符><项>}
<项> ::= <因子>{<乘法运算符><因子>}
<因子> ::= <标识符>|<无符号整数>|'('<表达式>')'
<加法运算符> ::= +|-
<乘法运算符> ::= *|/
<条件> ::= <表达式><关系运算符><表达式>|odd<表达式>
<关系运算符> ::= =|<>|<|<=|>|>=
<条件语句> ::= if<条件>then<语句>[else<语句>]
<当型循环语句> ::= while<条件>do<语句>
<过程调用语句> ::= call<标识符>
<复合语句> ::= begin<语句>{;<语句>}end
<重复语句> ::= repeat<语句>{;<语句>}until<条件>
<读语句> ::= read'('<标识符>{,<标识符>}')'
<写语句> ::= write'('<标识符>{,<标识符>}')'
<字母> ::= a|b|...|X|Y|Z
<数字> ::= 0|1|2|...|8|9

repeat
    x := x + 1;
    y := 1;
    z := 1;
util x > 0
<当型循环语句> ::= while<条件>do<语句>
<重复语句> ::= repeat<语句>{;<语句>}until<条件>
